// Copyright 2018 The OpenPitrix Authors. All rights reserved.
// Use of this source code is governed by a Apache license
// that can be found in the LICENSE file.

syntax = "proto3";
package openpitrix;

// set go package name to pb
option go_package = "pb";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

message CreateRepoRequest {
	google.protobuf.StringValue _ = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue description = 3;
	google.protobuf.StringValue type = 4;
	google.protobuf.StringValue url = 5;
	google.protobuf.StringValue credential = 6;
	google.protobuf.StringValue visibility = 7;
	repeated string providers = 8;
	google.protobuf.StringValue labels = 9;
	google.protobuf.StringValue selectors = 10;
}

message CreateRepoResponse {
	Repo repo = 1;
}

message ModifyRepoRequest {
	google.protobuf.StringValue repo_id = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue description = 3;
	google.protobuf.StringValue type = 4;
	google.protobuf.StringValue url = 5;
	google.protobuf.StringValue credential = 6;
	google.protobuf.StringValue visibility = 7;
	repeated string providers = 8;
}

message ModifyRepoResponse {
	Repo repo = 1;
}

message DeleteRepoRequest {
	google.protobuf.StringValue repo_id = 1;
}

message DeleteRepoResponse {
	Repo repo = 1;
}

message RepoLabel {
	google.protobuf.StringValue repo_label_id = 1;
	google.protobuf.StringValue repo_id = 2;
	google.protobuf.StringValue label_key = 3;
	google.protobuf.StringValue label_value = 4;

	google.protobuf.Timestamp create_time = 5;
}

message RepoSelector {
	google.protobuf.StringValue repo_selector_id = 1;
	google.protobuf.StringValue repo_id = 2;
	google.protobuf.StringValue selector_key = 3;
	google.protobuf.StringValue selector_value = 4;

	google.protobuf.Timestamp create_time = 5;
}

message Repo {
	google.protobuf.StringValue repo_id = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue description = 3;
	google.protobuf.StringValue type = 4;
	google.protobuf.StringValue url = 5;
	google.protobuf.StringValue credential = 6;
	google.protobuf.StringValue visibility = 7;
	google.protobuf.StringValue owner = 8;
	repeated string providers = 9;
	repeated RepoLabel labels = 10;
	repeated RepoSelector selectors = 11;

	google.protobuf.StringValue status = 12;
	google.protobuf.Timestamp create_time = 13;
	google.protobuf.Timestamp status_time = 14;
}

message DescribeReposRequest {
	repeated string repo_id = 1; // NOTE: grpc gateway cannot handle repeated StringValue
	repeated string name = 2;
	repeated string type = 3;
	repeated string visibility = 4;
	repeated string status = 5;
	repeated string provider = 6;
	google.protobuf.StringValue label = 7;
	google.protobuf.StringValue selector = 8;
	uint32 limit = 9; // NOTE: uint64 marshal to json will convert to string
	uint32 offset = 10;
}

message DescribeReposResponse {
	uint32 total_count = 1;
	repeated Repo repo_set = 2;
}

message CreateRepoLabelRequest {
	google.protobuf.StringValue repo_id = 1;
	google.protobuf.StringValue label_key = 2;
	google.protobuf.StringValue label_value = 3;
}

message CreateRepoLabelResponse {
	RepoLabel repo_label = 1;
}

message ModifyRepoLabelRequest {
	google.protobuf.StringValue repo_label_id = 1;
	google.protobuf.StringValue label_key = 2;
	google.protobuf.StringValue label_value = 3;
}

message ModifyRepoLabelResponse {
	RepoLabel repo_label = 1;
}

message DeleteRepoLabelRequest {
	google.protobuf.StringValue repo_label_id = 1;
}

message DeleteRepoLabelResponse {
	RepoLabel repo_label = 1;
}

message CreateRepoSelectorRequest {
	google.protobuf.StringValue repo_id = 1;
	google.protobuf.StringValue selector_key = 2;
	google.protobuf.StringValue selector_value = 3;
}

message CreateRepoSelectorResponse {
	RepoSelector repo_selector = 1;
}

message ModifyRepoSelectorRequest {
	google.protobuf.StringValue repo_selector_id = 1;
	google.protobuf.StringValue selector_key = 2;
	google.protobuf.StringValue selector_value = 3;
}

message ModifyRepoSelectorResponse {
	RepoSelector repo_selector = 1;
}

message DeleteRepoSelectorRequest {
	google.protobuf.StringValue repo_selector_id = 1;
}

message DeleteRepoSelectorResponse {
	RepoSelector repo_selector = 1;
}

service RepoManager {

	// Repo
	rpc CreateRepo (CreateRepoRequest) returns (CreateRepoResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "create repo"
		};
		option (google.api.http) = {
			post: "/v1/repos"
			body: "*"
		};
	}
	rpc DescribeRepos (DescribeReposRequest) returns (DescribeReposResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "describe repos with filter"
		};
		option (google.api.http) = {
			get: "/v1/repos"
		};
	}
	rpc ModifyRepo (ModifyRepoRequest) returns (ModifyRepoResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "modify repo"
		};
		option (google.api.http) = {
			patch: "/v1/repos"
			body: "*"
		};
	}
	rpc DeleteRepo (DeleteRepoRequest) returns (DeleteRepoResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "delete repo"
		};
		option (google.api.http) = {
			delete: "/v1/repos"
			body: "*"
		};
	}

	// Repo Label
	rpc CreateRepoLabel (CreateRepoLabelRequest) returns (CreateRepoLabelResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            summary: "create repo label"
        };
		option (google.api.http) = {
            post: "/v1/repo_labels"
            body: "*"
        };
	}
	rpc ModifyRepoLabel (ModifyRepoLabelRequest) returns (ModifyRepoLabelResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            summary: "modify repo label"
        };
		option (google.api.http) = {
            patch: "/v1/repo_labels"
            body: "*"
        };
	}
	rpc DeleteRepoLabel (DeleteRepoLabelRequest) returns (DeleteRepoLabelResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            summary: "delete repo label"
        };
		option (google.api.http) = {
            delete: "/v1/repo_labels"
            body: "*"
        };
	}

	// Repo Selector
	rpc CreateRepoSelector (CreateRepoSelectorRequest) returns (CreateRepoSelectorResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            summary: "create repo selector"
        };
		option (google.api.http) = {
            post: "/v1/repo_selectors"
            body: "*"
        };
	}
	rpc ModifyRepoSelector (ModifyRepoSelectorRequest) returns (ModifyRepoSelectorResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            summary: "modify repo selector"
        };
		option (google.api.http) = {
            patch: "/v1/repo_selectors"
            body: "*"
        };
	}
	rpc DeleteRepoSelector (DeleteRepoSelectorRequest) returns (DeleteRepoSelectorResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            summary: "delete repo selector"
        };
		option (google.api.http) = {
            delete: "/v1/repo_selectors"
            body: "*"
        };
	}
}

